[tool.poetry]
name = "module-datastruct"
version = "0.1.0"
description = ""
authors = ["Sam <iaiznura@gmail.com>"]
readme = "README.md"
packages = [{include = "module_datastruct"}]

[tool.poetry.dependencies]
python = "^3.11"
coverage = "^7.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
